// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeValues should render correctly 1`] = `
<div>
  <div
    class="cds--number-input-wrapper"
  >
    <div
      class="cds--form-item"
    >
      <div
        class="cds--number cds--number--helpertext cds--number-input-wrapper_carbon-input"
      >
        <div
          class="cds--number__input-wrapper"
        >
          <input
            aria-label="Numeric input field with increment and decrement buttons"
            id="TestNumberRuleElement-1"
            max="Infinity"
            min="-Infinity"
            name="TestNumberRuleElement-1"
            pattern="[0-9]*"
            placeholder="Enter value"
            step="1"
            type="number"
            value=""
          />
          <div
            class="cds--number__controls"
          >
            <button
              aria-atomic="true"
              aria-label="Increment number. Press Space or Enter in order to use icon."
              aria-live="polite"
              class="cds--number__control-btn up-icon"
              focusable="false"
              tabindex="-1"
              title="Increment number. Press Space or Enter in order to use icon."
              type="button"
              unselectable="on"
            >
              <svg
                aria-hidden="true"
                class="up-icon"
                focusable="false"
                height="4"
                preserveAspectRatio="xMidYMid meet"
                style="will-change: transform;"
                viewBox="0 0 8 4"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 4l4-4 4 4z"
                />
              </svg>
            </button>
            <button
              aria-atomic="true"
              aria-label="Decrement number. Press Space or Enter in order to use icon."
              aria-live="polite"
              class="cds--number__control-btn down-icon"
              focusable="false"
              tabindex="-1"
              title="Decrement number. Press Space or Enter in order to use icon."
              type="button"
              unselectable="on"
            >
              <svg
                aria-hidden="true"
                class="down-icon"
                focusable="false"
                height="4"
                preserveAspectRatio="xMidYMid meet"
                style="will-change: transform;"
                viewBox="0 0 8 4"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 0L4 4 0 0z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>

  </div>
  <div
    class="cds--number-input-wrapper"
  >
    <div
      class="cds--form-item"
    >
      <div
        class="cds--number cds--number--helpertext cds--number-input-wrapper_carbon-input"
      >
        <div
          class="cds--number__input-wrapper"
        >
          <input
            aria-label="Numeric input field with increment and decrement buttons"
            id="TestNumberRuleElement-2"
            max="Infinity"
            min="-Infinity"
            name="TestNumberRuleElement-2"
            pattern="[0-9]*"
            placeholder="Enter value"
            step="1"
            type="number"
            value=""
          />
          <div
            class="cds--number__controls"
          >
            <button
              aria-atomic="true"
              aria-label="Increment number. Press Space or Enter in order to use icon."
              aria-live="polite"
              class="cds--number__control-btn up-icon"
              focusable="false"
              tabindex="-1"
              title="Increment number. Press Space or Enter in order to use icon."
              type="button"
              unselectable="on"
            >
              <svg
                aria-hidden="true"
                class="up-icon"
                focusable="false"
                height="4"
                preserveAspectRatio="xMidYMid meet"
                style="will-change: transform;"
                viewBox="0 0 8 4"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 4l4-4 4 4z"
                />
              </svg>
            </button>
            <button
              aria-atomic="true"
              aria-label="Decrement number. Press Space or Enter in order to use icon."
              aria-live="polite"
              class="cds--number__control-btn down-icon"
              focusable="false"
              tabindex="-1"
              title="Decrement number. Press Space or Enter in order to use icon."
              type="button"
              unselectable="on"
            >
              <svg
                aria-hidden="true"
                class="down-icon"
                focusable="false"
                height="4"
                preserveAspectRatio="xMidYMid meet"
                style="will-change: transform;"
                viewBox="0 0 8 4"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 0L4 4 0 0z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>

  </div>
</div>
`;

exports[`RangeValues should render correctly for read-only 1`] = `
<div>
  <span
    class="cds--rule-value-readonly cds--text-space-left"
  >
    3
  </span>
  <span
    class="cds--text-space-left cds--text-space-right"
  >
    to
  </span>
  <span
    class="cds--rule-value-readonly cds--text-space-left"
  >
    7
  </span>
</div>
`;

exports[`RangeValues should render correctly with a provided value 1`] = `
<div>
  <div
    class="cds--number-input-wrapper"
  >
    <div
      class="cds--form-item"
    >
      <div
        class="cds--number cds--number--helpertext cds--number-input-wrapper_carbon-input"
      >
        <div
          class="cds--number__input-wrapper"
        >
          <input
            aria-label="Numeric input field with increment and decrement buttons"
            id="TestNumberRuleElement-1"
            max="Infinity"
            min="-Infinity"
            name="TestNumberRuleElement-1"
            pattern="[0-9]*"
            placeholder="Enter value"
            step="1"
            type="number"
            value="3"
          />
          <div
            class="cds--number__controls"
          >
            <button
              aria-atomic="true"
              aria-label="Increment number. Press Space or Enter in order to use icon."
              aria-live="polite"
              class="cds--number__control-btn up-icon"
              focusable="false"
              tabindex="-1"
              title="Increment number. Press Space or Enter in order to use icon."
              type="button"
              unselectable="on"
            >
              <svg
                aria-hidden="true"
                class="up-icon"
                focusable="false"
                height="4"
                preserveAspectRatio="xMidYMid meet"
                style="will-change: transform;"
                viewBox="0 0 8 4"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 4l4-4 4 4z"
                />
              </svg>
            </button>
            <button
              aria-atomic="true"
              aria-label="Decrement number. Press Space or Enter in order to use icon."
              aria-live="polite"
              class="cds--number__control-btn down-icon"
              focusable="false"
              tabindex="-1"
              title="Decrement number. Press Space or Enter in order to use icon."
              type="button"
              unselectable="on"
            >
              <svg
                aria-hidden="true"
                class="down-icon"
                focusable="false"
                height="4"
                preserveAspectRatio="xMidYMid meet"
                style="will-change: transform;"
                viewBox="0 0 8 4"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 0L4 4 0 0z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>

  </div>
  <div
    class="cds--number-input-wrapper"
  >
    <div
      class="cds--form-item"
    >
      <div
        class="cds--number cds--number--helpertext cds--number-input-wrapper_carbon-input"
      >
        <div
          class="cds--number__input-wrapper"
        >
          <input
            aria-label="Numeric input field with increment and decrement buttons"
            id="TestNumberRuleElement-2"
            max="Infinity"
            min="-Infinity"
            name="TestNumberRuleElement-2"
            pattern="[0-9]*"
            placeholder="Enter value"
            step="1"
            type="number"
            value="7"
          />
          <div
            class="cds--number__controls"
          >
            <button
              aria-atomic="true"
              aria-label="Increment number. Press Space or Enter in order to use icon."
              aria-live="polite"
              class="cds--number__control-btn up-icon"
              focusable="false"
              tabindex="-1"
              title="Increment number. Press Space or Enter in order to use icon."
              type="button"
              unselectable="on"
            >
              <svg
                aria-hidden="true"
                class="up-icon"
                focusable="false"
                height="4"
                preserveAspectRatio="xMidYMid meet"
                style="will-change: transform;"
                viewBox="0 0 8 4"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 4l4-4 4 4z"
                />
              </svg>
            </button>
            <button
              aria-atomic="true"
              aria-label="Decrement number. Press Space or Enter in order to use icon."
              aria-live="polite"
              class="cds--number__control-btn down-icon"
              focusable="false"
              tabindex="-1"
              title="Decrement number. Press Space or Enter in order to use icon."
              type="button"
              unselectable="on"
            >
              <svg
                aria-hidden="true"
                class="down-icon"
                focusable="false"
                height="4"
                preserveAspectRatio="xMidYMid meet"
                style="will-change: transform;"
                viewBox="0 0 8 4"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 0L4 4 0 0z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>

  </div>
</div>
`;
